--- a/src/app/components/employee-list/employee-list.html
+++ b/src/app/components/employee-list/employee-list.html
@@ -1,16 +1,19 @@
 <div class="w-full flex justify-between items-center mb-3 mt-1 pl-3">
     <div>
         <h3 class="text-lg font-semibold text-slate-800">Employee List</h3>
-        <p class="text-slate-500">Overview of the current activities.</p>
     </div>
     <div class="ml-3">
         <div class="w-full max-w-sm min-w-[200px] relative">
             <div class="relative">
                 <input
+                    [(ngModel)]="searchTerm"
+                    (ngModelChange)="onSearchEmployee()"
+                    (keyup.enter)="onSearchEmployee()"
                     class="bg-white w-full pr-11 h-10 pl-3 py-2 bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-200 rounded transition duration-200 ease focus:outline-none focus:border-slate-400 hover:border-slate-400 shadow-sm focus:shadow-md"
                     placeholder="Search for employee..." />
                 <button class="absolute h-8 w-8 right-1 top-1 my-auto px-2 flex items-center bg-white rounded "
-                    type="button">
+                    type="button"
+                    (click)="onSearchEmployee()">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3"
                         stroke="currentColor" class="w-8 h-8 text-slate-600">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -58,10 +61,15 @@
                         Education Details
                     </p>
                 </th>
+                <th class="p-4 border-b border-slate-200 bg-slate-50">
+                    <p class="text-sm font-normal leading-none text-slate-500">
+                        Actions
+                    </p>
+                </th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let employee of employees; let i = index" class="hover:bg-slate-50 border-b border-slate-200">
+            <tr *ngFor="let employee of filteredEmployees; let i = index" class="hover:bg-slate-50 border-b border-slate-200">
                 <td class="p-4 py-5">
                     <p class="block font-semibold text-sm text-slate-800">{{ i+1 }}</p>
                 </td>
@@ -79,9 +87,15 @@
                 </td>
                 <td>
                     <button
+                        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mr-2"
+                        (click)="navigateToEdit(employee.empId)">
+                        Edit
+                    </button>
+
+                    <button
                         class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                        (click)="onDeleteEmployee(employee.empId)">Delete</button>
-                        
+                        (click)="onDeleteEmployee(employee.empId)">Delete
+                    </button>
                 </td>
             </tr>
         </tbody>
