--- a/src/app/components/employee-form/employee-form.html
+++ b/src/app/components/employee-form/employee-form.html
@@ -33,19 +33,19 @@
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-4">
             <!-- Left Column -->
             <div class="flex flex-col gap-4">
-              <mat-form-field appearance="outline" class="w-full">
+              <mat-form-field appearance="outline" class="name-field w-full">
                 <mat-label>Name</mat-label>
                 <mat-icon matIconPrefix>person</mat-icon>
-                <input matInput formControlName="name" placeholder="Enter employee name" required />
+                <input matInput formControlName="name" placeholder="Enter employee name" />
                 <mat-error *ngIf="employeeForm.get('name')?.hasError('required')">
                   Name is required
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field appearance="outline" class="w-full">
+              <mat-form-field appearance="outline" class="email-field w-full">
                 <mat-label>Email</mat-label>
                 <mat-icon matIconPrefix>email</mat-icon>
-                <input matInput formControlName="email" type="email" placeholder="Enter email address" required />
+                <input matInput formControlName="email" type="email" placeholder="Enter email address" />
                 <mat-error *ngIf="employeeForm.get('email')?.hasError('required')">
                   Email is required
                 </mat-error>
@@ -57,19 +57,19 @@
 
             <!-- Right Column -->
             <div class="flex flex-col gap-4">
-              <mat-form-field appearance="outline" class="w-full">
+              <mat-form-field appearance="outline" class="jobTitle-field w-full">
                 <mat-label>Job Title</mat-label>
                 <mat-icon matIconPrefix>work</mat-icon>
-                <input matInput formControlName="jobTitle" placeholder="Enter job title" required />
+                <input matInput formControlName="jobTitle" placeholder="Enter job title" />
                 <mat-error *ngIf="employeeForm.get('jobTitle')?.hasError('required')">
                   Job Title is required
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field appearance="outline" class="w-full">
+              <mat-form-field appearance="outline" class="department-field w-full">
                 <mat-label>Department</mat-label>
                 <mat-icon matIconPrefix>business</mat-icon>
-                <input matInput formControlName="department" placeholder="Enter department" required />
+                <input matInput formControlName="department" placeholder="Enter department" />
                 <mat-error *ngIf="employeeForm.get('department')?.hasError('required')">
                   Department is required
                 </mat-error>
@@ -100,7 +100,7 @@
               </mat-card-header>
               <mat-card-content>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
-                  <mat-form-field appearance="outline" class="w-full">
+                  <mat-form-field appearance="outline" class="degree-field w-full">
                     <mat-label>Degree</mat-label>
                     <mat-icon matIconPrefix>school</mat-icon>
                     <mat-select formControlName="degree" required>
@@ -115,21 +115,21 @@
                     <mat-error>Degree is required</mat-error>
                   </mat-form-field>
 
-                  <mat-form-field appearance="outline" class="w-full">
+                  <mat-form-field class="institution-field w-full" appearance="outline">
                     <mat-label>Institution/Board</mat-label>
                     <mat-icon matIconPrefix>account_balance</mat-icon>
                     <input matInput formControlName="board" placeholder="e.g., University of XYZ" required />
                     <mat-error>Institution/Board is required</mat-error>
                   </mat-form-field>
 
-                  <mat-form-field appearance="outline" class="w-full">
+                  <mat-form-field appearance="outline" class="result-field w-full">
                     <mat-label>Result/Grade</mat-label>
                     <mat-icon matIconPrefix>grade</mat-icon>
                     <input matInput formControlName="result" placeholder="e.g., 3.8 GPA or First Class" required />
                     <mat-error>Result/Grade is required</mat-error>
                   </mat-form-field>
 
-                  <mat-form-field appearance="outline" class="w-full">
+                  <mat-form-field appearance="outline" class="passingYear-field w-full">
                     <mat-label>Year of Passing</mat-label>
                     <mat-icon matIconPrefix>calendar_today</mat-icon>
                     <input matInput formControlName="passingYear" type="number" placeholder="e.g., 2020" required 
