--- a/src/app/components/employee-list/employee-list.html
+++ b/src/app/components/employee-list/employee-list.html
@@ -3,12 +3,12 @@
   <mat-toolbar color="primary" class="mb-4 rounded">
     <span class="flex-1">Employee List</span>
     <mat-form-field appearance="outline" class="search-field mx-4" subscriptSizing="dynamic">
-      <mat-label>Search</mat-label>
+      <!-- <mat-label>Search</mat-label> -->
       <input matInput 
              [(ngModel)]="searchTerm"
              (ngModelChange)="onSearchEmployee()"
              (keyup.enter)="onSearchEmployee()"
-             placeholder="Search employees...">
+             placeholder="Search">
       <mat-icon matPrefix>search</mat-icon>
     </mat-form-field>
     <button mat-raised-button color="accent" routerLink="/form">
