--- a/src/app/components/assign-projects-to-employees/assign-projects-to-employees.html
+++ b/src/app/components/assign-projects-to-employees/assign-projects-to-employees.html
@@ -185,7 +185,7 @@
 
       <!-- Paginator -->
       <mat-paginator
-        [length]="dataSource?.data?.length || 0"
+        [length]="dataSource.data.length || 0"
         [pageSize]="10"
         [pageSizeOptions]="[5, 10, 25, 50]"
         showFirstLastButtons
