--- a/src/app/components/project-form/project-form.html
+++ b/src/app/components/project-form/project-form.html
@@ -168,7 +168,7 @@
             </mat-card-content>
 
             <!-- Paginator -->
-            <mat-paginator [length]="dataSource?.data?.length || 0" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 50]"
+            <mat-paginator [length]="dataSource.data.length || 0" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 50]"
                 showFirstLastButtons aria-label="Select page">
             </mat-paginator>
         </mat-card>
